tests/ui/delegation/self-coercion-static-free.stderr
error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:22:26
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                          ^^^^^^^^^^^^
   |                          |
   |                          expected `F`, found `S`
   |                          arguments to this function are incorrect
   |
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:10:8
   |
LL |     fn static_value(_: Self) -> i32 { 1 }
   |        ^^^^^^^^^^^^ -------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:22:40
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                                        ^^^^^^^^^^^^^^
   |                                        |
   |                                        expected `&mut F`, found `&mut S`
   |                                        arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut F`
              found mutable reference `&mut S`
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:11:8
   |
LL |     fn static_mut_ref(_: &mut Self) -> i32 { 2 }
   |        ^^^^^^^^^^^^^^ ------------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:22:56
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                                                        ^^^^^^^^^^
   |                                                        |
   |                                                        expected `&F`, found `&S`
   |                                                        arguments to this function are incorrect
   |
   = note: expected reference `&F`
              found reference `&S`
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:12:8
   |
LL |     fn static_ref(_: &Self) -> i32 { 3 }
   |        ^^^^^^^^^^ --------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:34:26
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                          ^^^^^^^^^^^^
   |                          |
   |                          expected `F`, found `S1`
   |                          arguments to this function are incorrect
   |
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:10:8
   |
LL |     fn static_value(_: Self) -> i32 { 1 }
   |        ^^^^^^^^^^^^ -------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:34:40
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                                        ^^^^^^^^^^^^^^
   |                                        |
   |                                        expected `&mut F`, found `&mut S1`
   |                                        arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut F`
              found mutable reference `&mut S1`
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:11:8
   |
LL |     fn static_mut_ref(_: &mut Self) -> i32 { 2 }
   |        ^^^^^^^^^^^^^^ ------------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:34:56
   |
LL |     reuse <F as Trait>::{static_value, static_mut_ref, static_ref} {
   |                                                        ^^^^^^^^^^
   |                                                        |
   |                                                        expected `&F`, found `&S1`
   |                                                        arguments to this function are incorrect
   |
   = note: expected reference `&F`
              found reference `&S1`
note: associated function defined here
  --> $DIR/self-coercion-static-free.rs:12:8
   |
LL |     fn static_ref(_: &Self) -> i32 { 3 }
   |        ^^^^^^^^^^ --------

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:50:43
   |
LL | reuse to_reuse::{value, mut_ref, r#ref} { F }
   |                         -------           ^ expected `&mut _`, found `F`
   |                         |
   |                         arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut _`
                         found struct `F`
note: function defined here
  --> $DIR/self-coercion-static-free.rs:46:12
   |
LL |     pub fn mut_ref(_: &mut impl Trait) -> i32 { 2 }
   |            ^^^^^^^ ------------------
help: consider mutably borrowing here
   |
LL | reuse to_reuse::{value, mut_ref, r#ref} { &mut F }
   |                                           ++++

error[E0308]: mismatched types
  --> $DIR/self-coercion-static-free.rs:50:43
   |
LL | reuse to_reuse::{value, mut_ref, r#ref} { F }
   |                                  -----    ^ expected `&_`, found `F`
   |                                  |
   |                                  arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `F`
note: function defined here
  --> $DIR/self-coercion-static-free.rs:47:12
   |
LL |     pub fn r#ref(_: &impl Trait) -> i32 { 3 }
   |            ^^^^^ --------------
help: consider borrowing here
   |
LL | reuse to_reuse::{value, mut_ref, r#ref} { &F }
   |                                           +

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
